resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      containers:
        - name: tdarr
          image: tdarr
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8265
              protocol: TCP
          volumeMounts:
            - mountPath: /app/configs
              name: config
            - mountPath: /media
              name: media
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
              memory: 4Gi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tdarr
      - name: media
        nfs:
          path: /volume1/media
          server: 192.168.1.21
