resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
spec:
  type: ClusterIP
  ports:
  - port: 8265
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: tdarr
