resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: tdarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tdarr.crt.house
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "tdarr.crt.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
  tls:
    - hosts:
      - tdarr.crt.house
